# motorGrafico

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
recursos/shaders/: basico.frag  basico.vert  linea.frag  linea.vert
src/: Conexion.cpp  Conexion.h  GestorPuntos.cpp  GestorPuntos.h  Punto3D.cpp  Punto3D.h  glad.c  main.cpp
src/Matematicas/: Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h
